samples/_failures_safe/1761446992_5f6bf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a93b983.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_1a93b983.c:161:9: error: expected declaration or statement at end of input
  161 |         case TOKEN_STRING: printf("STRING");
      |         ^~~~
./samples/SAFE/__tmp_1a93b983.c:161:9: error: expected declaration or statement at end of input
